fix menu and add center aligning for headings in info sections

--- a/styles.css
+++ b/styles.css
@@ -485,6 +485,8 @@ body {
 	font-family: 'Courier New', Courier, monospace;
 
 	margin: 0 !important;
+
+	text-align: center;
 }
 
 .lessWide {
